updates to files

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <div id="activities">
                 <div class="activity-card">
                     <div class="activity-card-img">
-                        <a href="#old-town_content"><img src="images/old-town-plovdiv.png" width="300px" height="300px" alt="Visit the Old Town" />
+                        <a href="#old-town_content"><img src="images/old-town-plovdiv.jpg" width="300px" height="300px" alt="Visit the Old Town" />
                             <div class="activity-card-title">
                                 <h3>Visit the Old Town</h3>
                         </a>
