--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <img src="images/logo-plovdiv.png" alt="Plovdiv Logo" class="logo-plovdiv">
+        <img src="images/logo-plovdiv.jpg" alt="Plovdiv Logo" class="logo-plovdiv">
         <img src="images/arrow-down.gif" alt="Scroll down" width="50" height="50">
     </header>
     <section class="top-activities">
